--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,10 @@
 pipeline {
     agent any
-
+    
     stages {
         stage('verify branch') {
             steps {
-                echo $GIT_BRANCH
+                echo "$GIT_BRANCH"
                 
             }
         }
